--- a/config/sync/views.view.global_technical_support.yml
+++ b/config/sync/views.view.global_technical_support.yml
@@ -186,10 +186,10 @@ display:
             group_items: {  }
           plugin_id: country
       sorts:
-        field_sorting_weight_value:
-          id: field_sorting_weight_value
-          table: taxonomy_term__field_sorting_weight
-          field: field_sorting_weight_value
+        weight:
+          id: weight
+          table: taxonomy_term_field_data
+          field: weight
           relationship: none
           group_type: group
           admin_label: ''
@@ -197,6 +197,8 @@ display:
           exposed: false
           expose:
             label: ''
+          entity_type: taxonomy_term
+          entity_field: weight
           plugin_id: standard
         name:
           id: name
