--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -12,6 +12,7 @@ dependencies:
     - field.field.node.article.field_department
     - field.field.node.article.field_display_author
     - field.field.node.article.field_image
+    - field.field.node.article.field_procedure
     - field.field.node.article.field_product_line
     - field.field.node.article.field_role
     - field.field.node.article.field_select_parent
@@ -38,7 +39,7 @@ third_party_settings:
       children:
         - field_article_media
       parent_name: ''
-      weight: 8
+      weight: 9
       format_type: fieldset
       region: content
       format_settings:
@@ -53,7 +54,7 @@ third_party_settings:
         - field_tags
         - field_article_type
       parent_name: ''
-      weight: 9
+      weight: 10
       format_type: fieldset
       region: content
       format_settings:
@@ -67,6 +68,7 @@ third_party_settings:
         - field_year
         - field_topic
         - field_product_line
+        - field_procedure
         - field_role
         - field_department
         - field_select_parent
@@ -99,7 +101,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -131,13 +133,13 @@ content:
     type: options_select
     region: content
   field_department:
-    weight: 23
+    weight: 24
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_display_author:
-    weight: 7
+    weight: 8
     settings:
       match_operator: CONTAINS
       match_limit: 10
@@ -154,6 +156,12 @@ content:
     third_party_settings: {  }
     type: image_image
     region: content
+  field_procedure:
+    weight: 22
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_product_line:
     weight: 21
     settings: {  }
@@ -161,13 +169,13 @@ content:
     type: options_select
     region: content
   field_role:
-    weight: 22
+    weight: 23
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_select_parent:
-    weight: 24
+    weight: 25
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -217,30 +225,30 @@ content:
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 15
+    weight: 16
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 17
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
     type: scheduler_moderation
-    weight: 19
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
   scheduler_settings:
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -253,13 +261,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
@@ -269,18 +277,18 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 18
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
   unpublish_state:
     type: scheduler_moderation
-    weight: 20
+    weight: 21
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
