--- a/config/sync/core.entity_form_display.node.event.default.yml
+++ b/config/sync/core.entity_form_display.node.event.default.yml
@@ -19,6 +19,7 @@ dependencies:
     - field.field.node.event.field_event_start
     - field.field.node.event.field_event_type
     - field.field.node.event.field_job_description
+    - field.field.node.event.field_procedure
     - field.field.node.event.field_product_line
     - field.field.node.event.field_role
     - field.field.node.event.field_select_parent
@@ -88,6 +89,7 @@ third_party_settings:
         - field_year
         - field_topic
         - field_product_line
+        - field_procedure
         - field_role
         - field_department
         - field_select_parent
@@ -109,9 +111,8 @@ third_party_settings:
         - field_job_description
         - field_contact_number
         - field_email
-        - field_event_email
       parent_name: ''
-      weight: 7
+      weight: 8
       format_type: fieldset
       region: content
       format_settings:
@@ -139,7 +140,7 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -165,7 +166,7 @@ content:
     type: string_textfield
     region: content
   field_department:
-    weight: 22
+    weight: 23
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -245,6 +246,12 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_procedure:
+    weight: 21
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_product_line:
     weight: 20
     settings: {  }
@@ -252,13 +259,13 @@ content:
     type: options_select
     region: content
   field_role:
-    weight: 21
+    weight: 22
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_select_parent:
-    weight: 23
+    weight: 24
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -295,14 +302,14 @@ content:
     region: content
   langcode:
     type: language_select
-    weight: 8
+    weight: 9
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 9
+    weight: 10
     settings: {  }
     region: content
     third_party_settings: {  }
@@ -344,7 +351,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 10
+    weight: 11
     settings:
       match_operator: CONTAINS
       size: 60
