--- a/config/sync/core.entity_form_display.node.instructional_videos.default.yml
+++ b/config/sync/core.entity_form_display.node.instructional_videos.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.instructional_videos.body
     - field.field.node.instructional_videos.field_department
+    - field.field.node.instructional_videos.field_procedure
     - field.field.node.instructional_videos.field_product_line
     - field.field.node.instructional_videos.field_role
     - field.field.node.instructional_videos.field_select_parent
@@ -27,11 +28,12 @@ third_party_settings:
         - field_year
         - field_topic
         - field_product_line
+        - field_procedure
         - field_role
         - field_department
         - field_select_parent
       parent_name: ''
-      weight: 4
+      weight: 3
       format_type: fieldset
       region: content
       format_settings:
@@ -81,8 +83,14 @@ content:
     third_party_settings: {  }
     type: options_select
     region: content
-  field_product_line:
+  field_procedure:
     weight: 18
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_product_line:
+    weight: 17
     settings: {  }
     third_party_settings: {  }
     type: options_select
@@ -100,7 +108,7 @@ content:
     type: options_select
     region: content
   field_topic:
-    weight: 17
+    weight: 16
     settings:
       match_operator: CONTAINS
       match_limit: 10
