--- a/config/sync/core.entity_view_display.node.clinical_publications.default.yml
+++ b/config/sync/core.entity_view_display.node.clinical_publications.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.clinical_publications.field_call_to_action
     - field.field.node.clinical_publications.field_department
     - field.field.node.clinical_publications.field_image
+    - field.field.node.clinical_publications.field_procedure
     - field.field.node.clinical_publications.field_product_line
     - field.field.node.clinical_publications.field_role
     - field.field.node.clinical_publications.field_select_parent
@@ -60,6 +61,14 @@ content:
       image_link: ''
     third_party_settings: {  }
     type: image
+    region: content
+  field_procedure:
+    weight: 112
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   field_product_line:
     weight: 104
