--- a/config/sync/core.entity_view_display.node.clinical_publications.horizontal_card.yml
+++ b/config/sync/core.entity_view_display.node.clinical_publications.horizontal_card.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.clinical_publications.field_call_to_action
     - field.field.node.clinical_publications.field_department
     - field.field.node.clinical_publications.field_image
+    - field.field.node.clinical_publications.field_procedure
     - field.field.node.clinical_publications.field_product_line
     - field.field.node.clinical_publications.field_role
     - field.field.node.clinical_publications.field_select_parent
@@ -98,6 +99,7 @@ hidden:
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
   field_call_to_action: true
+  field_procedure: true
   field_weight_to_sort: true
   langcode: true
   search_api_excerpt: true
