--- a/config/sync/core.entity_view_display.node.clinical_publications.teaser.yml
+++ b/config/sync/core.entity_view_display.node.clinical_publications.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.clinical_publications.field_call_to_action
     - field.field.node.clinical_publications.field_department
     - field.field.node.clinical_publications.field_image
+    - field.field.node.clinical_publications.field_procedure
     - field.field.node.clinical_publications.field_product_line
     - field.field.node.clinical_publications.field_role
     - field.field.node.clinical_publications.field_select_parent
@@ -43,6 +44,7 @@ hidden:
   field_call_to_action: true
   field_department: true
   field_image: true
+  field_procedure: true
   field_product_line: true
   field_role: true
   field_select_parent: true
