--- a/config/sync/core.entity_view_display.node.instructional_videos.default.yml
+++ b/config/sync/core.entity_view_display.node.instructional_videos.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.instructional_videos.body
     - field.field.node.instructional_videos.field_department
+    - field.field.node.instructional_videos.field_procedure
     - field.field.node.instructional_videos.field_product_line
     - field.field.node.instructional_videos.field_role
     - field.field.node.instructional_videos.field_select_parent
@@ -31,6 +32,14 @@ content:
     region: content
   field_department:
     weight: 106
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_procedure:
+    weight: 110
     label: above
     settings:
       link: true
