--- a/config/sync/field.field.media.document.field_media_file.yml
+++ b/config/sync/field.field.media.document.field_media_file.yml
@@ -21,7 +21,7 @@ default_value: {  }
 default_value_callback: ''
 settings:
   file_directory: '[date:custom:Y]-[date:custom:m]'
-  file_extensions: 'csv txt rtf pdf doc docx xls xlsx ppt pptx pps odt ods odp'
+  file_extensions: pdf
   max_filesize: ''
   description_field: false
   handler: 'default:file'
