--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.storage.node.field_article_type
     - field.storage.node.body
     - field.storage.node.field_department
+    - field.storage.node.field_document
     - field.storage.node.field_job_title
     - field.storage.node.field_layout_canvas
     - field.storage.node.field_news_type
@@ -100,6 +101,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_department
+  field_document:
+    label: 'Document Type'
+    datasource_id: 'entity:node'
+    property_path: field_document
+    type: integer
+    dependencies:
+      config:
+        - field.storage.node.field_document
   field_job_title:
     label: 'Job Title'
     datasource_id: 'entity:node'
