--- a/config/sync/webform.settings.yml
+++ b/config/sync/webform.settings.yml
@@ -200,5 +200,18 @@ langcode: en
 third_party_settings:
   captcha:
     replace_administration_mode: true
+  webform_entity_print:
+    debug: false
+    template:
+      header: '<h1>[webform_submission:label]</h1>'
+      footer: ''
+      css: "/* Remove page margins and padding and rely on the PDF generator's default margins. */\nbody {\n  margin: 0;\n}\n\n.page {\n  padding: 0;\n}"
+    export_types:
+      pdf:
+        enabled: true
+        link_text: 'Download PDF'
+        link_attributes:
+          class:
+            - button
 _core:
   default_config_hash: 9qAvxkBYFcXXYVGI3KlH9Ks1AxdH0u6GpCrxzqDXO8M
