--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -133,6 +133,7 @@ module:
   shield: 0
   simple_sitemap: 0
   smart_trim: 0
+  smtp: 0
   social_media_links: 0
   sophron: 0
   syslog: 0
@@ -149,6 +150,10 @@ module:
   verathon_customization: 0
   views_ui: 0
   webform: 0
+  webform_attachment: 0
+  webform_attachment_gated_download: 0
+  webform_entity_print: 0
+  webform_entity_print_attachment: 0
   webform_ui: 0
   workbench_email: 0
   workflows: 0
