--- a/config/sync/block.block.views_block__product_support_cards_eol_device.yml
+++ b/config/sync/block.block.views_block__product_support_cards_eol_device.yml
@@ -35,5 +35,5 @@ visibility:
     negate: false
   request_path:
     id: request_path
-    pages: /eol-devices
+    pages: "/eol-devices\r\n/eol-devices/*"
     negate: false
