--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -36,6 +36,8 @@ module:
   cohesion_website_settings: 0
   collapsiblock: 0
   config: 0
+  config_filter: 0
+  config_ignore: 0
   config_translation: 0
   content_moderation: 0
   contextual: 0
