--- a/config/sync/core.entity_form_display.node.news.default.yml
+++ b/config/sync/core.entity_form_display.node.news.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.field_call_to_action
     - field.field.node.news.field_media
     - field.field.node.news.field_news_type
+    - field.field.node.news.field_select_parent
     - field.field.node.news.field_short_description
     - node.type.news
   module:
@@ -23,7 +24,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 6
+    weight: 5
     settings:
       rows: 9
       summary_rows: 3
@@ -38,7 +39,7 @@ content:
     settings: {  }
     third_party_settings: {  }
   field_call_to_action:
-    weight: 4
+    weight: 3
     settings:
       placeholder_url: ''
       placeholder_title: ''
@@ -46,20 +47,26 @@ content:
     type: link_default
     region: content
   field_media:
-    weight: 2
+    weight: 1
     settings:
       media_types: {  }
     third_party_settings: {  }
     type: media_library_widget
     region: content
   field_news_type:
-    weight: 3
+    weight: 2
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
+  field_select_parent:
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: options_select
     region: content
   field_short_description:
-    weight: 5
+    weight: 4
     settings:
       size: 100
       placeholder: ''
