--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.field_call_to_action
     - field.field.node.news.field_media
     - field.field.node.news.field_news_type
+    - field.field.node.news.field_select_parent
     - field.field.node.news.field_short_description
     - node.type.news
   module:
@@ -41,6 +42,14 @@ content:
   field_news_type:
     weight: 1
     label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
+    region: content
+  field_select_parent:
+    weight: 5
+    label: above
     settings:
       link: true
     third_party_settings: {  }
