--- a/config/sync/core.entity_view_display.node.news.teaser.yml
+++ b/config/sync/core.entity_view_display.node.news.teaser.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.news.field_call_to_action
     - field.field.node.news.field_media
     - field.field.node.news.field_news_type
+    - field.field.node.news.field_select_parent
     - field.field.node.news.field_short_description
     - node.type.news
   module:
@@ -52,6 +53,7 @@ hidden:
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
   field_media: true
+  field_select_parent: true
   langcode: true
   links: true
   search_api_excerpt: true
