--- a/config/sync/views.view.news.yml
+++ b/config/sync/views.view.news.yml
@@ -664,6 +664,7 @@ display:
         style: false
         row: false
         title: false
+        arguments: false
       style:
         type: cohesion_layout
         options:
@@ -675,11 +676,47 @@ display:
           relationship: none
           view_mode: featured_news
       title: 'VERATHON NEWS'
+      arguments:
+        field_select_parent_target_id:
+          id: field_select_parent_target_id
+          table: node__field_select_parent
+          field: field_select_parent_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
@@ -730,6 +767,7 @@ display:
         style: false
         row: false
         title: false
+        arguments: false
       display_description: ''
       block_description: 'Homepage Right Column News Block'
       fields:
@@ -1068,11 +1106,47 @@ display:
           relationship: none
           view_mode: featured_news_right_column
       title: 'Right Column'
+      arguments:
+        field_select_parent_target_id:
+          id: field_select_parent_target_id
+          table: node__field_select_parent
+          field: field_select_parent_target_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          break_phrase: false
+          not: false
+          plugin_id: numeric
     cache_metadata:
       max-age: -1
       contexts:
         - 'languages:language_content'
         - 'languages:language_interface'
+        - url
         - 'user.node_grants:view'
         - user.permissions
       tags:
