--- a/config/sync/core.entity_view_display.node.product_documentation.default.yml
+++ b/config/sync/core.entity_view_display.node.product_documentation.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.product_documentation.field_document_format
     - field.field.node.product_documentation.field_event_published_on
     - field.field.node.product_documentation.field_final_doc
+    - field.field.node.product_documentation.field_gated_form
     - field.field.node.product_documentation.field_language
     - field.field.node.product_documentation.field_market
     - field.field.node.product_documentation.field_media
@@ -15,28 +16,29 @@ dependencies:
     - datetime
     - options
     - user
+    - webform
 id: node.product_documentation.default
 targetEntityType: node
 bundle: product_documentation
 mode: default
 content:
   field_document:
-    weight: 105
-    label: hidden
+    type: entity_reference_label
+    weight: 2
+    region: content
+    label: above
     settings:
       link: true
     third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   field_document_format:
-    weight: 110
+    weight: 6
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
   field_event_published_on:
-    weight: 107
+    weight: 3
     label: above
     settings:
       format_type: medium
@@ -45,15 +47,23 @@ content:
     type: datetime_default
     region: content
   field_final_doc:
-    weight: 108
+    weight: 4
     label: above
     settings:
       link_to_entity: false
     third_party_settings: {  }
     type: string
     region: content
+  field_gated_form:
+    weight: 7
+    label: above
+    settings:
+      source_entity: true
+    third_party_settings: {  }
+    type: webform_entity_reference_entity_view
+    region: content
   field_language:
-    weight: 102
+    weight: 1
     label: hidden
     settings:
       link: true
@@ -61,22 +71,14 @@ content:
     type: entity_reference_label
     region: content
   field_market:
-    weight: 109
+    weight: 5
     label: above
     settings: {  }
     third_party_settings: {  }
     type: list_default
     region: content
-  field_media:
-    weight: 106
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
   links:
-    weight: 100
+    weight: 0
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -84,5 +86,6 @@ hidden:
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
+  field_media: true
   langcode: true
   search_api_excerpt: true
