--- a/config/sync/search_api.index.acquia_search_index.yml
+++ b/config/sync/search_api.index.acquia_search_index.yml
@@ -3,13 +3,15 @@ langcode: en
 status: true
 dependencies:
   module:
+    - acquia_search
     - search_api_solr
     - cohesion_elements
     - node
     - search_api
+    - media
   config:
-    - field.storage.node.field_article_type
     - field.storage.node.body
+    - field.storage.node.field_article_type
     - field.storage.node.field_department
     - field.storage.node.field_document
     - field.storage.node.field_job_title
@@ -22,6 +24,8 @@ dependencies:
     - field.storage.node.field_year
     - search_api.server.acquia_search_server
 third_party_settings:
+  acquia_search:
+    use_edismax: 1
   search_api_solr:
     finalize: false
     commit_before_finalize: false
@@ -67,7 +71,7 @@ _core:
 id: acquia_search_index
 name: 'Acquia Search Solr Index'
 description: ''
-read_only: false
+read_only: true
 field_settings:
   body:
     label: Body
@@ -266,6 +270,14 @@ datasource_settings:
     languages:
       default: true
       selected: {  }
+  'entity:media':
+    bundles:
+      default: false
+      selected:
+        - document
+    languages:
+      default: true
+      selected: {  }
   'entity:node':
     bundles:
       default: true
@@ -332,8 +344,8 @@ processor_settings:
       preprocess_index: 0
 tracker_settings:
   default:
-    indexing_order: fifo
+    indexing_order: lifo
 options:
   index_directly: true
-  cron_limit: 50
+  cron_limit: 100
 server: acquia_search_server
