--- a/config/sync/search_api.index.content.yml
+++ b/config/sync/search_api.index.content.yml
@@ -8,6 +8,7 @@ dependencies:
     - node
     - taxonomy
     - search_api
+    - media
   config:
     - field.storage.node.body
     - field.storage.node.field_article_type
@@ -293,15 +294,18 @@ field_settings:
       module:
         - node
 datasource_settings:
-  'entity:node':
+  'entity:media':
     bundles:
       default: false
       selected:
-        - article
-        - event
-        - page
-        - person
-        - place
+        - document
+    languages:
+      default: true
+      selected: {  }
+  'entity:node':
+    bundles:
+      default: true
+      selected: {  }
     languages:
       default: true
       selected: {  }
@@ -411,8 +415,8 @@ processor_settings:
       preprocess_query: -3
 tracker_settings:
   default:
-    indexing_order: fifo
+    indexing_order: lifo
 options:
   index_directly: true
-  cron_limit: 50
+  cron_limit: 100
 server: acquia_search_server
