--- a/config/sync/views.view.acquia_search.yml
+++ b/config/sync/views.view.acquia_search.yml
@@ -7,9 +7,7 @@ dependencies:
     - field.storage.node.field_video_thumbnail
     - search_api.index.acquia_search_index
     - taxonomy.vocabulary.product_line
-    - views.view.search_fallback
   module:
-    - acquia_cms_search
     - cohesion
     - search_api
     - text
@@ -819,19 +817,8 @@ display:
           tokenize: false
           content:
             value: 'No results found.'
-            format: basic_html
+            format: script_format
           plugin_id: text
-        view_fallback:
-          id: view_fallback
-          table: views
-          field: view_fallback
-          relationship: none
-          group_type: group
-          admin_label: ''
-          empty: true
-          view_to_insert: 'search_fallback:search_fallback_block'
-          inherit_arguments: 0
-          plugin_id: view_fallback
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
