--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -150,6 +150,7 @@ module:
   views_ui: 0
   webform: 0
   webform_ui: 0
+  workbench_email: 0
   workflows: 0
   pathauto: 1
   content_translation: 10
