--- a/config/sync/block.block.exposedformproduct_support_cardsproduct_documentation.yml
+++ b/config/sync/block.block.exposedformproduct_support_cardsproduct_documentation.yml
@@ -33,5 +33,5 @@ visibility:
     negate: false
   request_path:
     id: request_path
-    pages: "/product-documentation\r\n/product-documentation/*"
+    pages: '/service-and-support/*'
     negate: false
