--- a/config/sync/block.block.views_block__product_support_cards_product_banner.yml
+++ b/config/sync/block.block.views_block__product_support_cards_product_banner.yml
@@ -35,5 +35,5 @@ visibility:
     negate: false
   request_path:
     id: request_path
-    pages: "/product-documentation\r\n/product-documentation/*"
+    pages: '/service-and-support/*'
     negate: false
