--- a/config/sync/user.role.content_administrator.yml
+++ b/config/sync/user.role.content_administrator.yml
@@ -81,6 +81,7 @@ permissions:
   - 'administer taxonomy'
   - 'bypass node access'
   - 'clone node entity'
+  - 'display eu cookie compliance popup'
   - 'schedule publishing of nodes'
   - 'use editorial transition archive'
   - 'use editorial transition archived_published'
