--- a/config/sync/user.role.content_author.yml
+++ b/config/sync/user.role.content_author.yml
@@ -91,6 +91,7 @@ permissions:
   - 'delete own person content'
   - 'delete own place content'
   - 'delete own video media'
+  - 'display eu cookie compliance popup'
   - 'edit own article content'
   - 'edit own document media'
   - 'edit own event content'
