--- a/config/sync/user.role.content_editor.yml
+++ b/config/sync/user.role.content_editor.yml
@@ -82,6 +82,7 @@ permissions:
   - 'delete any person content'
   - 'delete any place content'
   - 'delete any video media'
+  - 'display eu cookie compliance popup'
   - 'edit any article content'
   - 'edit any document media'
   - 'edit any event content'
