Have changed few configuration for the Services and Support page and also added two contrib modules

--- a/config/sync/asset_injector.js.product_support_cards.yml
+++ b/config/sync/asset_injector.js.product_support_cards.yml
@@ -16,7 +16,7 @@ conditions:
     negate: false
   request_path:
     id: request_path
-    pages: /service-support
+    pages: /service-and-support
     negate: false
 contexts: {  }
 header: false
