--- a/config/sync/core.entity_form_display.node.instructional_videos.default.yml
+++ b/config/sync/core.entity_form_display.node.instructional_videos.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.instructional_videos.body
+    - field.field.node.instructional_videos.field_call_to_action
     - field.field.node.instructional_videos.field_department
     - field.field.node.instructional_videos.field_procedure
     - field.field.node.instructional_videos.field_product_line
@@ -12,11 +13,13 @@ dependencies:
     - field.field.node.instructional_videos.field_topic
     - field.field.node.instructional_videos.field_video_thumbnail
     - field.field.node.instructional_videos.field_video_url
+    - field.field.node.instructional_videos.field_weight_to_sort
     - field.field.node.instructional_videos.field_year
     - node.type.instructional_videos
   module:
     - content_moderation
     - field_group
+    - link
     - media_library
     - path
     - scheduler
@@ -33,7 +36,7 @@ third_party_settings:
         - field_department
         - field_select_parent
       parent_name: ''
-      weight: 3
+      weight: 5
       format_type: fieldset
       region: content
       format_settings:
@@ -47,7 +50,7 @@ third_party_settings:
         - field_video_url
         - field_video_thumbnail
       parent_name: ''
-      weight: 2
+      weight: 4
       format_type: fieldset
       region: content
       format_settings:
@@ -73,10 +76,18 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
+  field_call_to_action:
+    weight: 2
+    settings:
+      placeholder_url: ''
+      placeholder_title: ''
+    third_party_settings: {  }
+    type: link_default
+    region: content
   field_department:
     weight: 20
     settings: {  }
@@ -132,32 +143,34 @@ content:
     third_party_settings: {  }
     type: string_textfield
     region: content
+  field_weight_to_sort:
+    weight: 3
+    settings: {  }
+    third_party_settings: {  }
+    type: options_select
+    region: content
   field_year:
     weight: 15
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
+    settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: options_select
     region: content
   langcode:
     type: language_select
-    weight: 5
+    weight: 6
     region: content
     settings:
       include_locked: true
     third_party_settings: {  }
   moderation_state:
     type: moderation_state_default
-    weight: 17
+    weight: 18
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 15
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -165,18 +178,18 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 8
+    weight: 9
     region: content
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 14
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   publish_state:
     type: options_buttons
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -184,14 +197,14 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 18
+    weight: 19
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 9
+    weight: 10
     region: content
     third_party_settings: {  }
   title:
@@ -203,13 +216,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 12
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 6
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -219,18 +232,18 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 13
+    weight: 14
     region: content
     settings: {  }
     third_party_settings: {  }
   unpublish_state:
     type: options_buttons
-    weight: 11
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 16
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
