--- a/config/sync/core.entity_view_display.node.instructional_videos.teaser.yml
+++ b/config/sync/core.entity_view_display.node.instructional_videos.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.instructional_videos.body
+    - field.field.node.instructional_videos.field_call_to_action
     - field.field.node.instructional_videos.field_department
     - field.field.node.instructional_videos.field_procedure
     - field.field.node.instructional_videos.field_product_line
@@ -13,6 +14,7 @@ dependencies:
     - field.field.node.instructional_videos.field_topic
     - field.field.node.instructional_videos.field_video_thumbnail
     - field.field.node.instructional_videos.field_video_url
+    - field.field.node.instructional_videos.field_weight_to_sort
     - field.field.node.instructional_videos.field_year
     - node.type.instructional_videos
   module:
@@ -40,6 +42,7 @@ hidden:
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
+  field_call_to_action: true
   field_department: true
   field_procedure: true
   field_product_line: true
@@ -48,6 +51,7 @@ hidden:
   field_topic: true
   field_video_thumbnail: true
   field_video_url: true
+  field_weight_to_sort: true
   field_year: true
   langcode: true
   search_api_excerpt: true
