--- a/config/sync/core.entity_view_display.node.news.default.yml
+++ b/config/sync/core.entity_view_display.node.news.default.yml
@@ -19,8 +19,15 @@ targetEntityType: node
 bundle: news
 mode: default
 content:
+  body:
+    type: text_default
+    weight: 1
+    region: content
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
   field_call_to_action:
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       trim_length: 80
@@ -32,7 +39,7 @@ content:
     type: link
     region: content
   field_media:
-    weight: 4
+    weight: 3
     label: above
     settings:
       link: true
@@ -40,7 +47,7 @@ content:
     type: entity_reference_label
     region: content
   field_news_type:
-    weight: 1
+    weight: 0
     label: hidden
     settings:
       link: true
@@ -48,25 +55,18 @@ content:
     type: entity_reference_label
     region: content
   field_select_parent:
-    weight: 5
+    weight: 4
     label: above
     settings:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
     region: content
-  field_short_description:
-    weight: 2
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
 hidden:
-  body: true
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
+  field_short_description: true
   langcode: true
   links: true
   search_api_excerpt: true
