--- a/config/sync/core.entity_view_display.node.product.default.yml
+++ b/config/sync/core.entity_view_display.node.product.default.yml
@@ -13,82 +13,24 @@ dependencies:
     - field.field.node.product.field_product_line
     - node.type.product
   module:
-    - cohesion_elements
-    - text
     - user
 id: node.product.default
 targetEntityType: node
 bundle: product
 mode: default
-content:
-  body:
-    label: hidden
-    type: text_default
-    weight: 1
-    settings: {  }
-    third_party_settings: {  }
-    region: content
-  field_layout_canvas:
-    weight: 3
-    label: hidden
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-    type: cohesion_entity_reference_revisions_entity_view
-    region: content
-  field_local_sales_representative:
-    weight: 7
-    label: above
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_media:
-    type: entity_reference_entity_view
-    weight: 2
-    region: content
-    label: hidden
-    settings:
-      view_mode: default
-      link: false
-    third_party_settings: {  }
-  field_no_longer_supported:
-    weight: 5
-    label: hidden
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_product_documentation:
-    weight: 6
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  field_product_line:
-    weight: 4
-    label: hidden
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-    region: content
-  links:
-    weight: 0
-    region: content
-    settings: {  }
-    third_party_settings: {  }
+content: {  }
 hidden:
+  body: true
   entity_print_view_epub: true
   entity_print_view_pdf: true
   entity_print_view_word_docx: true
   field_image: true
+  field_layout_canvas: true
+  field_local_sales_representative: true
+  field_media: true
+  field_no_longer_supported: true
+  field_product_documentation: true
+  field_product_line: true
   langcode: true
+  links: true
   search_api_excerpt: true
