--- a/config/sync/core.extension.yml
+++ b/config/sync/core.extension.yml
@@ -22,6 +22,7 @@ module:
   better_exposed_filters: 0
   block: 0
   block_content: 0
+  block_exclude_pages: 0
   breakpoint: 0
   captcha: 0
   ckeditor: 0
@@ -147,12 +148,14 @@ module:
   username_enumeration_prevention: 0
   verathon_bflex_calculator: 0
   verathon_customization: 0
+  views_block_filter_block: 0
   views_ui: 0
   webform: 0
   webform_ui: 0
   workbench_email: 0
   workflows: 0
   pathauto: 1
+  trailing_slash: 1
   content_translation: 10
   views: 10
   paragraphs: 11
