GTS: Updated the filter and removed the search button

--- a/config/sync/views.view.global_technical_support.yml
+++ b/config/sync/views.view.global_technical_support.yml
@@ -7,6 +7,7 @@ dependencies:
     - taxonomy.vocabulary.countries_and_regions
   module:
     - address
+    - better_exposed_filters
     - cohesion
     - taxonomy
     - user
@@ -40,7 +41,7 @@ display:
           query_comment: ''
           query_tags: {  }
       exposed_form:
-        type: basic
+        type: bef
         options:
           submit_button: Search
           reset_button: false
@@ -49,6 +50,26 @@ display:
           expose_sort_order: false
           sort_asc_label: Asc
           sort_desc_label: Desc
+          text_input_required: 'Select any filter and click on Apply to see results'
+          text_input_required_format: filtered_html
+          bef:
+            general:
+              autosubmit: true
+              autosubmit_exclude_textfield: false
+              autosubmit_textfield_delay: 500
+              autosubmit_hide: true
+              input_required: false
+              allow_secondary: false
+              secondary_label: 'Advanced options'
+              secondary_open: false
+            filter:
+              field_address_country_code:
+                plugin_id: default
+                advanced:
+                  rewrite:
+                    filter_rewrite_values: ''
+                  collapsible: false
+                  is_secondary: false
       pager:
         type: none
         options:
