VER2-1561: Added Placeholder for the search

--- a/config/sync/views.view.acquia_search.yml
+++ b/config/sync/views.view.acquia_search.yml
@@ -906,7 +906,7 @@ display:
               content_author: '0'
               content_editor: '0'
               user_administrator: '0'
-            placeholder: ''
+            placeholder: 'Search Verathon.com'
           is_grouped: false
           group_info:
             label: ''
